--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Glory African Braiding - Stockbridge, GA</title>
     <link href="css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <script src="js/app.js" defer></script>
 </head>
@@ -38,8 +39,58 @@
     </div>
     <div class="main">
         <div class="slideshow_container"></div>
-        <div class="article_container"></div>
-        <div class="main_text"></div>
+        <div class="article_container">
+            <article class="article">
+                <h1>Hair Braiding</h1>
+                <img src="images/hairbraiding.png" alt="hair braiding" title="hair braiding image">
+                <p>African hair braiding is an art, one that we have perfected at Glory African Hair Braiding. Our hair braiding salon in Stockbridge, GA offers a variety of styles for people of all ages. It can be hard to find a salon that offers quality men’s hair braiding, but we assure you that we are equally skilled in braids for people of any gender.</p>
+                <button>Find Out More!</button>
+            </article>
+            <article class="article">
+                <h1>Beauty Salon</h1>
+                <img src="images/beautysalon.png" alt="beauty salon" title="beauty salon image">
+                <p>In addition to offering great, professional braids, Glory African Hair Braiding is also the best beauty salon in Stockbridge, GA. Our hair stylists can style your hair for all sorts of special occasions such as weddings, proms, and fun nights out. We also specialize in installing natural-looking weaves that blend effortlessly with your natural hair and are easy to style. </p>
+                <button>Find Out More!</button>
+            </article>
+            <article class="article">
+                <h1>Custom Braiding</h1>
+                <img src="images/custombraiding.png" alt="custom braiding" title="custom braiding image">
+                <p>Are you tired of the same old braiding styles? Have you always wanted to stand out from the crowd? For the best custom braiding in Stockbridge, GA, come to Glory African Hair Braiding. We will work with you to create a unique look for everyday wear. Let us know what kind of braids you are imagining, and our team of stylists will work hard to carry out your vision.</p>
+                <button>Find Out More!</button>
+            </article>
+        </div>
+        <div class="main_wrapper">
+            <div class="main_text">
+                <h1>Welcome to Glory African Hair Braiding</h1>
+                <p>Here at Glory African Hair Braiding, our team of hair care professionals specializes in a variety of services, including braiding for men, women, and children. Because we know that every customer has his or her own unique look, our professionals are experienced in performing an array of braiding techniques. We also offer beauty salon services such as weave insertion and hair styling. We truly have something for everybody at Glory African Hair Braiding.</p>
+                <p>When done properly, hair braiding is a great way to keep your hair beautiful, without a lot of daily maintenance. Our braids last for months on end and are a great way to protect your hair and give it a break from styling products. We know all of the latest styles including cornrows, twists, micro braids, tree braids, invisible braids, and many more. We can also do custom braids for all of you unique individuals out there. </p>
+                <p>Do you not have enough hair to braid? That’s no problem! Our natural-looking weaves will have your hair looking fuller and thicker in no time. Let our professional stylists style your new weave for you as well. We have been providing service you can trust for five years, so we are sure you will be satisfied after a visit with us.</p>
+                <p>We are located in Stockbridge, GA and are open Monday through Saturday and on Sunday by appointment. Walk-in clients are always welcome, but you can also make an appointment in person or by phone. We can’t wait to see you and help your hair reach its full potential.</p>
+            </div>
+            <div class="main_contact">
+                <div class="main_contact-header">
+                    <h1>Glory African Hair Braiding</h1>
+                </div>
+                <hr>
+                <div class="main_contact-info">
+                    <p>5222 North Henry Blvd Suite E<br>
+                        Stockbridge, GA 30281</p>
+                        <p>Telephone:<br>
+                            (678) 228 - 1608<br>
+                            (404) 457 - 4162</p>
+                </div>
+                <hr>
+                <div class="main_contact-socials">
+                    <h5>Connect With Us Here:</h5>
+                    <ul>
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-yelp"></i></li>
+                        <li><i class="fab fa-google-plus-g"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        
     </div>
     <div class="footer"></div>
 </body>
