Popup, Slideshow, Footer
Added popup with slide in animation and timeout js function

Added Slideshow and arrow icons

Added Footer

--- a/index.html
+++ b/index.html
@@ -37,8 +37,26 @@
             </ul>
         </div>
     </div>
+    <div class="popup" id="popup">
+        <div class="popup_container">
+            <i class="far fa-times-circle" id="close"></i>
+            <p>We are open and following all recomended health and safety guidelines!</p>
+            <p>All customers must <span id="mask">wear a mask</span> upon entry!</p>
+            <p>Please call now for more information!</p>
+            <p>(678) 228-1608 or (404) 457-4162</p>
+        </div>
+    </div>
     <div class="main">
-        <div class="slideshow_container"></div>
+        <div class="slideshow_container">
+            <i class="fas fa-arrow-left" id="left-arrow"></i>
+            <div class="slideshow_wrapper">
+                <img class="slide one" id="one" src="images/slide1.jpg" alt="slide1 img" title="braids 1">
+                <img class="slide two" id="two" src="images/slide2.jpg" alt="slide2 img" title="braids 2">
+                <img class="slide three" id="three" src="images/slide3.jpg" alt="slide3 img" title="braids 3">
+                <img class="slide four" id="four" src="images/slide4.jpg" alt="slide4 img" title="braids 4">
+            </div>
+            <i class="fas fa-arrow-right" id="right-arrow"></i>
+        </div>
         <div class="article_container">
             <article class="article">
                 <h1>Hair Braiding</h1>
@@ -90,8 +108,13 @@
                 </div>
             </div>
         </div>
-        
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="footer_container">
+            <p>Copyright &copy; Glory African Hair Braiding 2020 All Rights Reserved.</p>
+            <address>5222 North Henry Blvd Suite E Stockbridge, GA 30281</address>
+            <p>Phone: (678) 228-1608</p>
+        </div>
+    </div>
 </body>
 </html>
