update landing page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="images/logo.png" alt="logo" title="gloryafricanbraidinglogo">
             </div>
         </div>
-        <div class="nav">
+        <div class="nav" id="nav">
             <ul>
                 <li>Home</li>
                 <li>About</li>
@@ -35,6 +35,11 @@
                 <li>Gallery</li>
                 <li>Contact</li>
             </ul>
+        </div>
+        <div class="mobilenav" id="mobilenav">
+            <span class="bars"></span>
+            <span class="bars"></span>
+            <span class="bars"></span>
         </div>
     </div>
     <div class="popup" id="popup">
